# NaviProject

./: .env  .gitignore  automated_bot.py  factories.py  manage.py  pyproject.toml
NaviProject/: asgi.py  settings.py  urls.py  views.py  wsgi.py
NaviProject/custom_jwt/: jwt_views.py  urls.py
NaviProject/post/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
NaviProject/post/migrations/: 0001_initial.py  0002_alter_post_text.py
NaviProject/user/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
NaviProject/user/migrations/: 0001_initial.py  0002_user_is_active_user_is_admin_user_is_staff_and_more.py  0003_user_groups_user_user_permissions.py  0004_user_last_activity.py
